--- a/_posts/2025-06-06-mario.md
+++ b/_posts/2025-06-06-mario.md
@@ -1,5 +1,6 @@
 ---
 author: dan
+tags: mario games
 ---
 
 Mario Party is a series of party video games created by Hudson Soft and owned by Nintendo. It features characters from the Mario franchise in which up to four local players or computer-controlled characters (called "CPUs") compete in a board game interspersed with minigames. Designed by Shigeru Miyamoto, and directed by Kenji Kikuchi, the games are currently developed by Nintendo Cube and published by Nintendo, being previously developed by Hudson Soft. The series is known for its party game elements, including the often unpredictable multiplayer game modes that allow play with up to four, and sometimes eight, human players or CPUs.
